[gd_scene load_steps=8 format=2]

[ext_resource path="res://Maps/Map.gd" type="Script" id=2]
[ext_resource path="res://Path/GridPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/RegenChamber.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/Fonts/Gamer.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.0901961, 0.454902, 1 )

[node name="Map" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 304.0, 168.0 ],
"_edit_vertical_guides_": [ 48.0 ]
}

[node name="RegenChamber" parent="." instance=ExtResource( 4 )]
position = Vector2( 304, 304 )

[node name="GridPath" parent="." instance=ExtResource( 3 )]
visible = true

[node name="Collectibles" type="Node2D" parent="."]

[node name="StartPositions" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Info" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 64.0
theme = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Info"]
margin_left = 20.0
margin_right = 106.0
margin_bottom = 64.0
alignment = 1

[node name="Label" type="Label" parent="UI/Info/VBoxContainer"]
margin_top = 4.0
margin_right = 106.0
margin_bottom = 30.0
text = "POINT DIF"

[node name="Points" type="Label" parent="UI/Info/VBoxContainer"]
margin_top = 34.0
margin_right = 106.0
margin_bottom = 60.0
text = "0"
align = 1

[node name="ChangeThis" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="Panel" parent="ChangeThis"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Centre" type="Position2D" parent="."]
position = Vector2( 304, 304 )

[connection signal="respawnPlayer" from="RegenChamber" to="." method="_on_RegenChamber_respawnPlayer"]
